# CausalOctonionGraph

./: .gitignore  BIG_QUESTIONS.md  CLAUDE.md  CONTRIBUTING.md  CausalGraphTheory.lean  FORMATTING.md  LESSONS_AND_TIPS.md  Main.lean  ORIENTATION.md  PROGRESS.md  README.md  cog_runtime_default_v1.json  lake-manifest.json  lakefile.toml  pyproject.toml  scratch_nufit_results.html  scratch_nufit_v61.html  scratchworkers0068b8bd3a23freetime2026-03-01.md  scratchworkers02394a67ad1bfreetime2026-03-01.md  scratchworkers039a99a61480freetime2026-03-01.md  scratchworkers6106a60a28b8freetime2026-03-01.md  scratchworkers8b014eaadd61freetime2026-03-01.md  scratchworkersc8e2cde4fa17freetime2026-03-01.md
CausalGraphTheory/: Algebra.lean  Alpha001FanoGraphBound.lean  AlphaCombinatoricBridge.lean  AlphaFano.lean  AlphaFineStructure.lean  AnomalyCancellation.lean  CFS001Embedding.lean  CFS002LocalAlgebra.lean  CFS003EdgeOperator.lean  CFS003Propagator.lean  CausalInvariance.lean  CausalOrder.lean  ComplexOctonion.lean  Constants.lean  D4D5Contracts.lean  DAGProof.lean  Distance.lean  EEScattering.lean  ElectronSelfInteraction.lean  ExportOracle.lean  Fano.lean  FanoMul.lean  FureyChain.lean  GaugeGroup.lean  GaugeObservables.lean  GaugeSL23.lean  Gen001SingleGen.lean  GenerationCount.lean  GenerationLockContract.lean  GenerationSeparation.lean  GravityAssociator.lean  H7CycleExtraction.lean  H7Handedness.lean  H7HandednessLaw.lean  H7IndexFunction.lean  H7SignFunction.lean  H7SupportClosure.lean  HydrogenBinding.lean  KernelV2.lean  KernelV4Lightcone.lean  (+38 more)
(+2693 files in other folders)
