[project]
name = "hacg-calc"
version = "0.1.0"
description = "Computational layer for the Holographic Algebraic Causal Graph project"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "networkx>=3.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["calc"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["calc*"]
